fixed \0 termination of embedded files.

--- a/admin.html
+++ b/admin.html
@@ -6,10 +6,18 @@
 <body>
 <H1>Station Configuration</H1>
 <form action="/cfg" method="GET">
-  WLAN SSID to connect:      <input id="sta_ssid" type="text" value=""><br>
-  WLAN Password (if needed): <input id="sta_pass" type="text" value=""><br>
-  <br/><br/>
-  <input type="submit" value="Submit">
+<table border="0">
+<tr>
+  <td>WLAN SSID to connect:</td>
+  <td><input id="sta_ssid" type="text" value=""></td>
+</tr>
+<tr>
+ <td>WLAN Password (if needed):</td>
+ <td><input id="sta_pass" type="text" value=""></td>
+</tr>
+</table>
+<br/><br/>
+<input type="submit" value="Submit">
 </form>
 
 <script> 
@@ -21,11 +29,11 @@
 	ajax.onreadystatechange = function() {
 	  if (ajax.readyState == 4 && ajax.status == 200) {
 	    cfg = JSON.parse(ajax.responseText);
-	    s.value = cfg.sta.ssid;
-	    p.value = cfg.sta.pass;
+	    sta_s.value = cfg.sta.ssid;
+	    sta_p.value = cfg.sta.pass;
 	  }
 	};
-	ajax.open("GET", "/cfg/?json=1", true); ajax.send();
+	ajax.open("GET", "/cfg?json=1", true); ajax.send();
     }
     window.onload = function() { FillForm(); }
 </script>
