--- a/admin.html
+++ b/admin.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-</head>
+<head><meta charset="utf-8" /></head>
 <body>
 <H1>Station Configuration</H1>
 <form action="/cfg" method="GET">
