--- a/slider.html
+++ b/slider.html
@@ -2,14 +2,15 @@
 <html>
 <head><meta charset="utf-8" /></head>
 <body>
-<input id="servo1" type ="range" onkeyup="sendValue('servo1', 'servo1_label')" onchange="sendValue('servo1','servo1_label')" min ="0" max="180" step ="5" value ="90"/>
+<input id="servo1" type ="range" onkeyup="sendValue('servo1', 'servo1_label')" onchange="sendValue('servo1','servo1_label')" min="0" max="180" step="5" value="90"/>
 <input id="servo1_label" onchange="sendValue('servo1_label', 'servo1')" type="text" size="3"></input>
-<input id="servo1_left"  onclick="changeValues(0, 0, 0,   'servo1_label', 'servo1')" type="button" value="|<"></input>
+<br><input id="servo1_left"  onclick="changeValues(0, 0, 0,   'servo1_label', 'servo1')" type="button" value="|<"></input>
 <input id="servo1_minus" onclick="changeValues(0,-5,180,  'servo1_label', 'servo1')" type="button" value="<"></input>
 <input id="servo1_cent"  onclick="changeValues(90,90,90,  'servo1_label', 'servo1')" type="button" value="="></input>
 <input id="servo1_plus"  onclick="changeValues(0,+5,180,  'servo1_label', 'servo1')" type="button" value=">"></input>
 <input id="servo1_right" onclick="changeValues(180,0,180, 'servo1_label', 'servo1')" type="button" value=">|"></input>
-<tt><span id="servo1_response">&nbsp;</span></tt>
+speed:<input id="servo1_speed" type="text" size="3" value="250"></input>
+<br><tt><span id="servo1_response">&nbsp;</span></tt>
 
 <script> 
     function loadValue(srcID, destID) {
@@ -35,7 +36,8 @@
 
 	// also send value to the server...
 	name = srcID; if (name.length > destID.length) { name = destID; }
-	url="/servo?id="+name+"&pos="+x.value
+	var s = document.getElementById(name+"_speed");
+	url="/servo?id="+name+"&pos="+x.value+"&speed="+s.value;
 	var ajax = new XMLHttpRequest();
 	ajax.onreadystatechange = function() {
 	  if (ajax.readyState == 4 && ajax.status == 200) {
