station reconfiguration debugged. Works now. FIXME: need a proper CGI unescape for decoding of GET parameters. We currently only do String.replace('+', ' ');

--- a/admin.html
+++ b/admin.html
@@ -7,11 +7,11 @@
 <table border="0">
 <tr>
   <td>WLAN SSID to connect:</td>
-  <td><input id="sta_ssid" type="text" value=""></td>
+  <td><input name="sta_ssid" id="sta_ssid" type="text" value=""></td>
 </tr>
 <tr>
  <td>WLAN Password (if needed):</td>
- <td><input id="sta_pass" type="text" value=""></td>
+ <td><input name="sta_pass" id="sta_pass" type="text" value=""></td>
 </tr>
 </table>
 <br/><br/>
